fix letter spacing

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ h1 {
   background-color: hsl(158, 36%, 27%);
 }
 
-.perfume{
+.perfume {
   text-transform: uppercase;
-  letter-spacing: 10px;
+  letter-spacing: 5px;
 }
